Fixed issue with line labels and high contrast mode

--- a/src/demo.css
+++ b/src/demo.css
@@ -32,6 +32,7 @@
 }
 
 .label {
+	color: inherit;
 	text-anchor: start;
 	transform: translate(5px, 5px);
 }
